force-app/main/default/objects/HFS_Evidence__c/HFS_Evidence__c.object-meta.xml
<CustomObject>
    <description>Citable evidence supporting work and recommendations.</description>
    <label>Evidence</label>
    <nameField>
        <displayFormat>EVD-{000000}</displayFormat>
        <label>Evidence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>