force-app/main/default/objects/HFS_Evidence__c/fields/Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Captured_At__c</fullName>
    <label>Captured At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>