force-app/main/default/objects/HFS_Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>