force-app/main/default/objects/HFS_Evidence__c/fields/Related_Entity__c.field-meta.xml
<CustomField>
    <fullName>Related_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Entity</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Evidence by Related Entity</relationshipLabel>
    <relationshipName>HFS_Evidence_Related_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>