force-app/main/default/objects/HFS_Evidence__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>HFS_Work_Item__c</referenceTo>
    <relationshipLabel>Evidence by Work Item</relationshipLabel>
    <relationshipName>HFS_Evidence_Work_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>